Clear encryption data when no longer needed